<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerProducts"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:clipToPadding="false"
                android:background="@android:color/white"
                android:overScrollMode="never"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/btnRice"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/icon_rice_0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/rice"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnNoodle"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/icon_noodle_1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/noodle"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnSnack"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/icon_snack_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/snack"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnMilkTea"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/icon_milk_tea_3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/milk_tea"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/voucher_rice"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@android:color/black"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerRices"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/voucher_snack"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@android:color/black"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerSnacks"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/voucher_milk_tea"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@android:color/black"/>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerMilkTeas"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>