<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <fragment
            android:id="@+id/mapFragment"
            class="com.here.android.mpa.mapping.AndroidXMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/btnMyLocation"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_250sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/background_button_set_map">
            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/location"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btnSetMap"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/background_button_set_map">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_layers_24" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutSetMap"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:visibility="gone"
            android:background="@drawable/background_button_map_type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/set_map_type"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSetMapNormalDay"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/map_type_normal"
                    android:background="@drawable/background_button_map_type"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnSetMapNormalNight"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/map_type_night"
                    android:background="@drawable/background_button_map_type"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnSetMapSatellite"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/map_type_satellite"
                    android:background="@drawable/background_button_map_type"
                    android:textAllCaps="false" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/btnOffViewList"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_190sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/background_button_viewlist"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_format_list_bulleted_24"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnViewList"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/background_button_viewlist"
            android:orientation="horizontal"
            android:visibility="visible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_format_list_bulleted_24"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/get_list_product"
                android:layout_gravity="center_vertical"
                android:textColor="#0013FF"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewListProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_alignParentBottom="true"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>